# MapCreator

./: CMakeLists.txt  README.md  build.sh  package.json  sample_map.cdm
include/: AssetManager.h  Camera.h  GameObject.h  Light.h  MapData.h  MapEditor.h  Model.h  ModelEditor.h  ModernRenderer.h  Renderer.h  Scene.h  Shader.h  Terrain.h  TerrainEditor.h  Transform.h  UI.h
shaders/: basic.frag  basic.vert
src/: AssetManager.cpp  CMakeLists.txt  Camera.cpp  GameObject.cpp  GraphicalMapEditor.cpp  MapData.cpp  MapEditor.cpp  ModernRenderer.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  SimpleMapEditor.cpp  Transform.cpp  UI.cpp  main.cpp
